2012-11-29  Pedro Vicente  <pvicente@uci.edu>

	* bm: ncks #39 exclude variables (netCDF3 file)
    
    * deprecate nco_var_lst_xcl and use nco_var_lst_xcl_trv for both netCDF3 and netCDF4
    
    * Qt: allow Win32 build with netCDF3; define environment $(HEADER_NETCDF3) and $(LIB_NETCDF3)
      and use CONFIG += netcdf3 in /qt/nco.pri
    
2012-11-28  Pedro Vicente  <pvicente@uci.edu>

	* Add --get_file_info option
    
    * bm: ncks #33 --get_grp_info option (netCDF3 file)
    
    * bm: ncks #34 --get_grp_info option (netCDF4 file)
    
    * bm: ncks #35 --get_file_info option (netCDF3 file)
    
    * bm: ncks #36 --get_file_info option (netCDF4 file)
    
    * bm: ncks #37 exclude all variables (netCDF3 file)
    
    * bm: ncks #38 exclude all variables (netCDF4 file)

2012-11-27  Pedro Vicente  <pvicente@uci.edu>

    * Add --get_grp_info option

2012-11-20  Pedro Vicente  <pvicente@uci.edu>

	* bm: If NCO_AVOID_BM_REPORT do not prompt to send benchmark results to project
   
    * bm: Detect ENABLE_NETCDF4 and HAVE_NETCDF4_H in config.h and run tests accordingly

2012-11-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3: anchoring, recursion
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Document anchoring and recursion at http://nco.sf.net/nco.html#rcr

	* Implement logic for anchoring and recursion in nco_chk_trv()
    
2012-11-18  Charlie Zender  <zender@uci.edu>

	* rx seems to work for both variables and groups in nco_chk_trv()

	* Move rx #ifdef logic from nco_chk_trv() down into nco_trv_rx_search()

	* Implement additional checks for variables in nco_chk_trv()

	* Implement rx for groups in nco_chk_trv()

	* Re-organize and rename nco_grp_trv structures

	* Functionalize nco_hash2comma()

2012-11-17  Charlie Zender  <zender@uci.edu>

	* Tidy nco_grp_utl.[ch]
