@@ -1,5 +1,11 @@
 2012-11-29  Pedro Vicente  <pvicente@uci.edu>
 
+	* bm: ncks #40 2D variable definition (netCDF4 file)
+    
+    * deprecate grp_id member of nm_id_sct; use full group name to get ID as needed
+      
+2012-11-29  Pedro Vicente  <pvicente@uci.edu>
+
 	* bm: ncks #39 exclude variables (netCDF3 file)
     
     * deprecate nco_var_lst_xcl and use nco_var_lst_xcl_trv for both netCDF3 and netCDF4
